Fix nav menu for Safari: menu items too tall, so displaying background at bottom of menu items
Also, the previous commit did not fix the problem of the scroll bars appearing for
short admin pages. Reversed the change and looking for another fix.

--- a/workspace/assets/css/public.css
+++ b/workspace/assets/css/public.css
@@ -17,6 +17,7 @@ body.public #nav > li a {
 	float:left;
 	color:#666;
 	padding:15px 1em;
+	height:0;
 }
 body.public #nav > li a:hover,
 body.public #nav > li a.active,
