--- a/workspace/assets/css/system.css
+++ b/workspace/assets/css/system.css
@@ -12,10 +12,6 @@ System Navigation
   background:#e3e0d1;
   }
 
-form {
-  margin-top:-5.74em;
-  padding-bottom:3em;
-}
 
 /* menu (horizontal submenus)
 ----------------------------------------------- */
